--- a/resources/js/scss/config/_config.scss
+++ b/resources/js/scss/config/_config.scss
@@ -19,3 +19,21 @@ select:-webkit-autofill:focus {
 
 	transition: background-color 5000s ease-in-out 0s;
 }
+
+.loading{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background:#ffffffba;
+    i{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 4rem;
+        height: 4rem;
+    }
+}
