--- a/resources/js/scss/modules/_account.scss
+++ b/resources/js/scss/modules/_account.scss
@@ -38,5 +38,8 @@
         table {
             box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
         }
+        ul {
+            float: right;
+        }
     }
 }
