[FE][User][update validation]

--- a/resources/js/scss/custom/_button.scss
+++ b/resources/js/scss/custom/_button.scss
@@ -7,11 +7,13 @@
 
 	&:active {
 		box-shadow: none;
+		background: #242368;
 	}
 
 	&:active {
 		&:focus {
 			box-shadow: none;
+			background: #242368;
 		}
 	}
 }
