[FE][Ideas][Create UI Ideas]

--- a/resources/js/scss/_index.scss
+++ b/resources/js/scss/_index.scss
@@ -4,4 +4,5 @@
 
 @import './custom/_input';
 @import './custom/_button';
-@import './modules/account'
+@import './modules/account';
+@import './modules/ideas'
