[FE][fix acount]

--- a/resources/js/scss/modules/_account.scss
+++ b/resources/js/scss/modules/_account.scss
@@ -58,6 +58,9 @@
                 background: #242368;
                 color: #fff;
             }
+            td {
+                vertical-align: middle;
+            }
         }
         ul {
             float: right;
