--- a/resources/js/scss/modules/_ideas.scss
+++ b/resources/js/scss/modules/_ideas.scss
@@ -32,7 +32,7 @@
             }
             .area-content {
                 i {
-                    font-size: 5px;
+                    font-size: 15px;
                 }
                 &__header {
                     display: flex;
@@ -50,6 +50,9 @@
                         .btn:nth-child(2):active {
                             background: inherit;
                             color: rgb(238, 20, 20);
+                        }
+                        .btn:nth-child(3) {
+                            background: inherit;
                         }
                         button {
                             text-decoration: none;
@@ -133,7 +136,7 @@
             position: relative;
             header {
                 border-bottom: 1px solid #ddd;
-                padding: 0px 4px 15px 16px ;
+                padding: 0px 4px 15px 16px;
                 position: sticky;
                 flex-grow: 1;
                 overflow: hidden;
@@ -150,13 +153,28 @@
             }
             .user-comment {
                 display: inline-block;
-                min-width:0;
+                min-width: 0;
                 flex-shrink: 1;
-                align-items:stretch;
+                align-items: stretch;
                 div > span {
                     display: inline;
                     position: relative;
                 }
+            }
+        }
+    }
+}
+
+.ideas {
+    padding: 20px;
+    &__header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        &-actions {
+            button {
+                background: #242368;
             }
         }
     }
